// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gas_used accepts valid values 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 2`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 3`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 4`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 5`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 6`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 7`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 8`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 9`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    42,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 10`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    42,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 11`] = `
{
  "data": [
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 12`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 13`] = `
{
  "data": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "type": "Buffer",
}
`;

exports[`gas_used accepts valid values 14`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "type": "Buffer",
}
`;
